Working Chat Functionality

--- a/app/assets/stylesheets/api/server_styles/chatbox.scss
+++ b/app/assets/stylesheets/api/server_styles/chatbox.scss
@@ -27,3 +27,10 @@
     padding-bottom: 11px;
     padding-top: 11px;
 }
+
+.chat-comments{
+    color:#dcddde;
+}
+.chat-comments:hover{
+    background-color:#202225;
+}
