--- a/app/assets/stylesheets/api/server_styles/membersidebar.scss
+++ b/app/assets/stylesheets/api/server_styles/membersidebar.scss
@@ -1,5 +1,8 @@
 .member-sidebar-nav{
-   background-color: #2f3136;
+    height: 100vh;
+    background-color: #2f3136;
+    position: relative;
+    display: block
 };
 
 .member-listing{
