--- a/app/assets/stylesheets/api/server_styles/sidebar.scss
+++ b/app/assets/stylesheets/api/server_styles/sidebar.scss
@@ -7,7 +7,7 @@
     padding: 12px 0 0;
     font-family: 'Catamaran',Arial,sans-serif;
     left: 0;
-    
+    height: 98vh;
 }
 
 .server-icon-me{
