--- a/app/assets/stylesheets/api/server_styles/chatbox.scss
+++ b/app/assets/stylesheets/api/server_styles/chatbox.scss
@@ -8,7 +8,7 @@
     width: 100%;
     -webkit-box-flex: 0;
     flex: 0 0 auto;
-    height: 56px;
+    height: 59px;
     padding: 0 8px;
     font-size: 16px;
     line-height: 20px;
@@ -33,8 +33,13 @@
     align-items: stretch;
     position: relative;
     width: 100%;
+   
 }
 
+.messages-portion{
+     overflow: hidden scroll;
+     height: 730px;
+}
 .chat-input{
     position: relative;
     display: block;
