--- a/app/assets/stylesheets/api/server_styles/chatbox.scss
+++ b/app/assets/stylesheets/api/server_styles/chatbox.scss
@@ -39,6 +39,26 @@
 .messages-portion{
      overflow: hidden scroll;
      height: 730px;
+    }
+.messages-portion::-webkit-scrollbar{
+    width: 16px;
+    height: 16px;
+}
+.messages-portion::-webkit-scrollbar-thumb{
+    background-color: #202225;
+    min-height: 40px;
+    border: 4px solid transparent;
+    background-clip: padding-box;
+    border-radius: 8px;
+};
+
+.messages-portion::-webkit-scrollbar-track{
+    background-color: #2f3136;
+    border: 4px solid transparent;
+    background-clip: padding-box;
+    border-radius: 8px;
+    width: 16px;
+    height: 16px;
 }
 .chat-input{
     position: relative;
