--- a/app/assets/stylesheets/api/server_styles/chatbox.scss
+++ b/app/assets/stylesheets/api/server_styles/chatbox.scss
@@ -50,7 +50,12 @@
     border: 4px solid transparent;
     background-clip: padding-box;
     border-radius: 8px;
+    visibility: hidden;
 };
+
+.messages-portion:hover::-webkit-scrollbar-thumb{
+    visibility: visible;
+}
 
 .messages-portion::-webkit-scrollbar-track{
     background-color: #2f3136;
@@ -60,6 +65,8 @@
     width: 16px;
     height: 16px;
 }
+
+
 .chat-input{
     position: relative;
     display: block;
