--- a/app/assets/stylesheets/api/server_styles/sidebar.scss
+++ b/app/assets/stylesheets/api/server_styles/sidebar.scss
@@ -8,7 +8,10 @@
     font-family: 'Catamaran',Arial,sans-serif;
     left: 0;
     height: 98vh;
+    overflow: hidden ;
 }
+
+
 
 .server-icon-me{
     background-color: pink;
