--- a/app/assets/stylesheets/api/context_menus/server_context_menu.scss
+++ b/app/assets/stylesheets/api/context_menus/server_context_menu.scss
@@ -1,4 +1,6 @@
 .server-context{
-    background-color: 'white';
-    z-index: '9999'
+    background-color: white;
+    z-index: 9999;
+    color: black;
+    position: absolute;
 }
