--- a/app/assets/stylesheets/api/context_menus/server_context_menu.scss
+++ b/app/assets/stylesheets/api/context_menus/server_context_menu.scss
@@ -1,6 +1,30 @@
 .server-context{
-    background-color: white;
+    background-color: #18191c;
     z-index: 9999;
-    color: black;
+    color: #b9bbbe;
     position: absolute;
+    display: block;
+}
+
+.copy-inv{
+    padding: 6px 8px;
+    border-bottom: 0.5px solid #b9bbbe;
+
+}
+
+.copy-inv:hover{
+    background-color: hsl(235,calc(var(--saturation-factor, 1)*86.1%),77.5%);
+    cursor: pointer;
+    color: white;
+}
+
+.leave-del{
+    color: red;
+    padding: 6px 8px;
+}
+
+.leave-del:hover{
+    background-color: hsl(359,calc(var(--saturation-factor, 1)*82.6%),59.4%);
+    color: white;
+    cursor: pointer;
 }
