--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- HTML Meta Tags -->
     <title>Scordid</title>
+    <meta name="description" content="A full stack clone of Discord made by https://dblonc.github.io">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Scordid">
+    <meta itemprop="description" content="A full stack clone of Discord made by https://dblonc.github.io">
+    <meta itemprop="image" content="https://imgur.com/J0L07A1">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://scordid.herokuapp.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Scordid">
+    <meta property="og:description" content="A full stack clone of Discord made by https://dblonc.github.io">
+    <meta property="og:image" content="https://imgur.com/J0L07A1">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Scordid">
+    <meta name="twitter:description" content="A full stack clone of Discord made by https://dblonc.github.io">
+    <meta name="twitter:image" content="https://imgur.com/J0L07A1">
+
+    <!-- Meta Tags Generated via http://heymeta.com -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-<meta name=”image” property=”og:image” content=”app/assets/images/splash.png”>
-<script type="text/javascript">
-  window.loginwpURL = "<%= image_url('loginwp.jpg')%>"
-  window.sliceoneURL = "<%= image_url('slice-one.svg')%>"
-  window.slicetwoURL = "<%= image_url('slice-two.svg')%>"
-  window.lightslashURL = "<%= image_url('light-slash.svg')%>"
-  window.slicefourURL = "<%= image_url('slice-four.svg')%>"
-  window.castleoneURL = "<%= image_url('castle-one.svg')%>"
-  window.castletwoURL = "<%= image_url('moving-castle.svg')%>"
-  window.bigmovingbottomURL = "<%= image_url('big-moving-bottom-cloud.svg')%>"
-  window.giantmovingURL = "<%= image_url('giant-moving-cloud.svg')%>"
-  window.bigbluemovingURL = "<%= image_url('big-blue-moving-cloud.svg')%>"
-  window.bigbluemoving2URL = "<%= image_url('big-blue-moving-cloud-2.svg')%>"
-  window.mediumthreeURL = "<%= image_url('medium-three.svg')%>"
-  window.seethruoneURL = "<%= image_url('seethru-one.svg')%>"
-  window.purplemovingURL = "<%= image_url('purple-moving.svg')%>"
-  window.thinmovinglinesURL = "<%= image_url('thin-moving-lines.svg')%>"
-  window.diastarURL = "<%= image_url('dia-star.svg')%>"
-  window.priateshipURL = "<%= image_url('pirate-ship.svg')%>"
-  window.purplearchURL = "<%= image_url('purple-arch.svg')%>"
-  window.whispycloudsURL = "<%= image_url('whispy-clouds.svg')%>"
-  window.balloonfightURL = "<%= image_url('balloon-fight.svg')%>"
-  window.citybgURL = "<%= image_url('city-bg.svg')%>"
-  window.froggyhomieURL = "<%= image_url('froggy-homie.svg')%>"
-  window.swagguysURL = "<%= image_url('swagguys.svg')%>"
-  window.scordidwhiteURL = "<%= image_url('SCORDID-white.png')%>"
-  window.scordidpurpleURL = "<%= image_url('SCORDID-purple.png')%>"
-  window.studygroupURL = "<%= image_url('studygroup.svg')%>"
-  window.greywaveURL = "<%= image_url('grey-wave.png')%>"
-  window.greywavebotURL = "<%= image_url('grey-wave-bot.png')%>"
-  window.voiceconnectedURL = "<%= image_url('voiceconnected.svg')%>"
-  window.hangoutlistURL = "<%= image_url('hangoutlist.svg')%>"
-  window.justchillinURL = "<%= image_url('justchillin.svg')%>"
-  window.sparklesURL = "<%= image_url('sparkles.svg')%>"
-  window.newleftURL = "<%=image_url('newgroupleft.svg')%>"
-  window.newrightURL = "<%=image_url('newgroupright.svg')%>"
-  window.newcloudsURL = "<%=image_url('newclouds.svg')%>"
-  window.newstudygroupURL = "<%=image_url('newstudygroup.svg')%>"
-  window.newvoiceconnectedURL = "<%=image_url('newvoiceconnected.svg')%>"
-  window.newfandomURL = "<%=image_url('newfandom.svg')%>"
-  window.newjustchillinURL = "<%=image_url('newjustchillin.svg')%>"
-</script>
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+    <meta name=”image” property=”og:image” content=”app/assets/images/splash.png”>
+    <script type="text/javascript">
+      window.loginwpURL = "<%= image_url('loginwp.jpg')%>"
+      window.sliceoneURL = "<%= image_url('slice-one.svg')%>"
+      window.slicetwoURL = "<%= image_url('slice-two.svg')%>"
+      window.lightslashURL = "<%= image_url('light-slash.svg')%>"
+      window.slicefourURL = "<%= image_url('slice-four.svg')%>"
+      window.castleoneURL = "<%= image_url('castle-one.svg')%>"
+      window.castletwoURL = "<%= image_url('moving-castle.svg')%>"
+      window.bigmovingbottomURL = "<%= image_url('big-moving-bottom-cloud.svg')%>"
+      window.giantmovingURL = "<%= image_url('giant-moving-cloud.svg')%>"
+      window.bigbluemovingURL = "<%= image_url('big-blue-moving-cloud.svg')%>"
+      window.bigbluemoving2URL = "<%= image_url('big-blue-moving-cloud-2.svg')%>"
+      window.mediumthreeURL = "<%= image_url('medium-three.svg')%>"
+      window.seethruoneURL = "<%= image_url('seethru-one.svg')%>"
+      window.purplemovingURL = "<%= image_url('purple-moving.svg')%>"
+      window.thinmovinglinesURL = "<%= image_url('thin-moving-lines.svg')%>"
+      window.diastarURL = "<%= image_url('dia-star.svg')%>"
+      window.priateshipURL = "<%= image_url('pirate-ship.svg')%>"
+      window.purplearchURL = "<%= image_url('purple-arch.svg')%>"
+      window.whispycloudsURL = "<%= image_url('whispy-clouds.svg')%>"
+      window.balloonfightURL = "<%= image_url('balloon-fight.svg')%>"
+      window.citybgURL = "<%= image_url('city-bg.svg')%>"
+      window.froggyhomieURL = "<%= image_url('froggy-homie.svg')%>"
+      window.swagguysURL = "<%= image_url('swagguys.svg')%>"
+      window.scordidwhiteURL = "<%= image_url('SCORDID-white.png')%>"
+      window.scordidpurpleURL = "<%= image_url('SCORDID-purple.png')%>"
+      window.studygroupURL = "<%= image_url('studygroup.svg')%>"
+      window.greywaveURL = "<%= image_url('grey-wave.png')%>"
+      window.greywavebotURL = "<%= image_url('grey-wave-bot.png')%>"
+      window.voiceconnectedURL = "<%= image_url('voiceconnected.svg')%>"
+      window.hangoutlistURL = "<%= image_url('hangoutlist.svg')%>"
+      window.justchillinURL = "<%= image_url('justchillin.svg')%>"
+      window.sparklesURL = "<%= image_url('sparkles.svg')%>"
+      window.newleftURL = "<%=image_url('newgroupleft.svg')%>"
+      window.newrightURL = "<%=image_url('newgroupright.svg')%>"
+      window.newcloudsURL = "<%=image_url('newclouds.svg')%>"
+      window.newstudygroupURL = "<%=image_url('newstudygroup.svg')%>"
+      window.newvoiceconnectedURL = "<%=image_url('newvoiceconnected.svg')%>"
+      window.newfandomURL = "<%=image_url('newfandom.svg')%>"
+      window.newjustchillinURL = "<%=image_url('newjustchillin.svg')%>"
+    </script>
   </head>
 
   <body>
