used erb tags instead for images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Scordid">
     <meta itemprop="description" content="A full stack clone of Discord made by https://dblonc.github.io">
-    <meta itemprop="image" content="https://imgur.com/J0L07A1">
+    <meta itemprop="image" content="<%= image_url('splash.png') %>" >
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://scordid.herokuapp.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Scordid">
     <meta property="og:description" content="A full stack clone of Discord made by https://dblonc.github.io">
-    <meta property="og:image" content="https://imgur.com/J0L07A1">
+    <meta property="og:image" content="<%= image_url('splash.png') %>" >
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Scordid">
     <meta name="twitter:description" content="A full stack clone of Discord made by https://dblonc.github.io">
-    <meta name="twitter:image" content="https://imgur.com/J0L07A1">
+    <meta name="twitter:image" content="<%= image_url('splash.png') %>" >
 
     <!-- Meta Tags Generated via http://heymeta.com -->
     <%= csrf_meta_tags %>
